# BOSCH-Future-Mobility-Challenge

./: README.md
Brain/src/data/localisationssystem/: position_listener.py
Brain/src/data/trafficlights/: Example.py
Brain/src/data/vehicletovehicle/: Example.py
Brain/src/hardware/camera/: CameraProcess.py  CameraSpooferProcess.py  CameraThread.py
Brain/src/hardware/serialhandler/: ReadThread.py  SerialHandlerProcess.py  WriteThread.py
Brain/src/utils/camerastreamer/: CameraStreamerProcess.py
Brain/src/utils/remotecontrol/: KeyboardListenerThread.py  RemoteControlReceiverProcess.py  RemoteControlTransmitterProcess.py
Brain/test/environmentalSERVER/: env.py
Brain/test/localisationsystemSERVER/: CarClientServer.py  locsysSERVER.py
Startup_C/: CMakeLists.txt  README.md  app1.cpp
Startup_C/include/: Message.hpp  ResponseHandler.hpp  SerialComManager.hpp  example1.hpp
Startup_C/src/: Message.cpp  example1.cpp  serialPortHandler.cpp
